                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.5


  *) [TS-1990] Fix core at CacheContinuation::handleDisposeEvent().

  *) [TS-2010] Build fixes for OS X 10.9 and Xcode 5.

  *) [TS-1957] fix If CacheContinuation timeout, timeout Event will be loop

  *) [TS-2007] Add TSNetConnectTransparent API for transparent net connections

  *) [TS-1991] clang complaint: logical not is only applied to the left hand
   side of this comparison.

  *) [TS-1958] Web UI can crash doing a regex lookup.

  *) [TS-1994] Increase default RAM cache size by a magnitude.

  *) [TS-1978] Segfault when trying to set an error from (remap) plugin. This
   also fixes a bug where the "default" template was not loaded upon startup.

  *) [TS-1977] Build issues on OSX / clang related to stacksize changes.

  *) [TS-1972] TSNetAcceptNamedProtocol does not receive connections.

  *) [TS-1970] Using ssl_ca_name= in ssl_multicert.config fails.

  *) [TS-1946] Reduce the verbosity of SSL handshake errors.

  *) [TS-1971] Switch jtest over to standard argument parsing.

  *) [TS-1786] Only enable -Werror for development builds.

  *) [TS-1960] Decouple stacksize config from core, this fixes regressions.

  *) [TS-1959] traffic_manager not honoring some records.config settings
   necessary for e.g. logging.

  *) [TS-745] support interim caching in storage to enable, use
   '--enable-interim-cache' configure option. 

  *) [TS-1968] Promote header_rewrite plugin from experimental

  *) [TS-1961] Add tsxs support for querying installation variables.

  *) [TS-1886] Allow users to attempt gcc builds on Mac OS X.

  *) [TS-1934] Make geoip_acl experimental plugin compile.

  *) [TS-1948] Remove obsolete TSPluginLicenseRequired and plugin.db.

  *) [TS-1942] Remove username.cache configs, they are obsolete and long gone.

  *) [TS-1496] Enable per transaction flow control.
